# HelpDocAppPSql

./: .gitignore  health-chatbot-masterplan.md  history.txt
backend/: .env  Cargo.toml  diesel.toml  log4rs.yaml
backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend/migrations/2024-11-02-180853_alter_existing_index_names/: down.sql  up.sql
backend/migrations/2024-11-02-180942_create_articles_collection_embedding/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/db/: mod.rs  schema.rs  surrealdb.rs
backend/src/db/models/: article.rs  chat.rs  collection.rs  embedding.rs  mod.rs  old_article.rs  old_collection.rs
backend/src/routes/: mod.rs
backend/src/scripts/: migrate.rs  migration.rs
backend/src/services/: data_processor.rs  semantic_search.rs
