[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
actix-web-codegen = "4.3.0"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenv = "0.15"
env_logger = "0.11.5"
futures = "0.3.30"
kalosm = { version = "0.3.2", features = ["language"] }
log = "0.4.22"
log4rs = "1.3.0"
pgvector = { version = "0.4", features = ["diesel", "serde"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
surrealdb = "2.0.4"
thiserror = "1.0.63"
tokio = { version = "1.32", features = ["full", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.16"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[build]
rustflags = ["-C", "target-cpu=native"]
